--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
